# beam-solver

./: BenchSuite.hpp  CMakeLists.txt  MesLib.cpp  MesLib.h  ParLib.cpp  ParLib.hpp  README.md  ThreadPool.cpp  ThreadPool.hpp  benchmark_beam_solution.cpp  solve.cpp  solve.h
include/: BenchSuite.hpp  MesLib.h  ParLib.hpp  ThreadPool.hpp  solve.h
src/: MesLib.cpp  ParLib.cpp  ThreadPool.cpp  benchmark_beam_solution.cpp  solve.cpp
